--- a/Socialamedier.html
+++ b/Socialamedier.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Home button added here -->
         <div class="home-button">
-            <a href="jackfash.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
         <h1 class="title">Följ oss på sociala medier för att beställa</h1>
         <div class="social-links">
