--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="product-info">
                     <h2>Product 1</h2>
 
-                    <p class="price">$Price1</p>
+                    <p class="price">18 000:-</p>
                     <!-- Inside your product block -->
                     <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
