--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
 
                         <a href="#" class="btn-quality">Quality Check</a>
                     </div>
+                </div>
 
 
+                <div class="product col-2" data-category="Skor" data-name="Air Force 1">
+                    <img src="af1.jpg" alt="Air force 1">
+                    <div class="product-info">
+                        <h2>Air Force 1</h2>
 
+                        <p class="price">550:-</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
                 </div>
         </main> <!-- Repeat this block for each product -->
         <!-- Example Product -->
