jackfash sök o filter fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="searchInput" onkeyup="searchProducts()" placeholder="Search for products...">
         </header>
 
-        <main>
+        <main id="productGallery">
             <div class="product col-2" data-category="Tröjor" data-name="product1">
                 <img src="valpar1.jpg" alt="Product 1">
                 <div class="product-info">
