--- a/index.html
+++ b/index.html
@@ -64,6 +64,34 @@
                         <a href="#" class="btn-quality">Quality Check</a>
                     </div>
                 </div>
+
+
+                <div class="product col-2" data-category="accessories" data-name="LV Louis Vuitton Bälte">
+                    <img src="lvbelt.jpg" alt="Louis Vuitton bälte">
+                    <div class="product-info">
+                        <h2>Louis Vuitton bälte</h2>
+
+                        <p class="price">750:-</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+                
+                <div class="product col-2" data-category="Tröjor" data-name="fotbollströja">
+                    <img src="fotbollströja.jpg" alt="fotbollströja">
+                    <div class="product-info">
+                        <h2>fotbollströja </h2>
+
+                        <p class="price">500 :-</p>
+                        <p class="price"> Dem flästa tröjor finns valfritt tryck och player/fan version </p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
         </main> <!-- Repeat this block for each product -->
         <!-- Example Product -->
 
