--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
                 <div class="product col-2" data-category="Skor" data-name="Air Force 1">
-                    <img src="af1.jpg" alt="Air force 1">
+                    <img src="airf1.jpg" alt="Air force 1">
                     <div class="product-info">
                         <h2>Air Force 1</h2>
 
