--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </div>
 
 
-                <div class="product col-2" data-category="Skor" data-name="Air Force 1">
-                    <img src="airf1.jpg" alt="Air force 1">
+                <div class="product col-2" data-category="Skor" data-name="AF AF1 Air force 1">
+                    <img src="airf1.jpg" alt="AF AF1 Air force 1">
                     <div class="product-info">
                         <h2>Air Force 1</h2>
 
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 
-                <div class="product col-2" data-category="Tröjor" data-name="fotbollströja">
+                <div class="product col-2" data-category="Tröjor" data-name="shirt fotbollströja football">
                     <img src="fotbollströja.jpg" alt="fotbollströja">
                     <div class="product-info">
                         <h2>fotbollströja </h2>
