--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="product-info">
                         <h2>Air Force 1</h2>
 
-                        <p class="price">550:-</p>
+                        <p class="price">549:-</p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
@@ -71,7 +71,7 @@
                     <div class="product-info">
                         <h2>Louis Vuitton bälte</h2>
 
-                        <p class="price">750:-</p>
+                        <p class="price">749:-</p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
@@ -84,8 +84,23 @@
                     <div class="product-info">
                         <h2>fotbollströja </h2>
 
-                        <p class="price">500 :-</p>
+                        <p class="price">499:-</p>
                         <p class="price"> Dem flästa tröjor finns valfritt tryck och player/fan version </p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+
+
+                <div class="product col-2" data-category="" data-name="">
+                    <img src="" alt="">
+                    <div class="product-info">
+                        <h2> </h2>
+
+                        <p class="price">:-</p>
+                        <p class="price"> </p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
