--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main id="productGallery">
             <!-- Repeat this block for each product -->
 
-                <div class="product col-2" data-category="Skor" data-name="AF AF1 Air force 1">
+                <div class="product col-2" data-category="skor" data-name="AF AF1 Air force 1">
                     <img src="airf1.jpg" alt="AF AF1 Air force 1">
                     <div class="product-info">
                         <h2>Air Force 1</h2>
