--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Jackfash</h1>
             <nav>
                 <button onclick="filterCategory('all')">All</button>
-                <button onclick="filterCategory('tröjor')">Tröjor</button>
+                <button onclick="filterCategory('tröja')">Tröjor</button>
                 <button onclick="filterCategory('jacka')">Jackor</button>
                 <button onclick="filterCategory('skor')">Skor</button>
                 <button onclick="filterCategory('acc')">Accessories</button>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 
-                <div class="product col-2" data-category="Tröjor" data-name="shirt fotbollströja football">
+                <div class="product col-2" data-category="tröja" data-name="shirt fotbollströja football">
                     <img src="fotbollströja.jpg" alt="fotbollströja">
                     <div class="product-info">
                         <h2>fotbollströja </h2>
