--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <h2>Louis Vuitton bälte</h2>
 
                         <p class="price">749:-</p>
+                        <p class="price">Finns olika mönster och färger</p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
@@ -74,7 +75,21 @@
                         <h2> </h2>
 
                         <p class="price">1499:-</p>
-                        <p class="price">finns många olika cardigans </p>
+                        <p class="price">Finns många olika cardigans </p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+                
+                <div class="product col-2" data-category="skor" data-name="Air Jordan 1 AJ1 aj1 Aj1">
+                    <img src="aj1.webp" alt="Air Jordan 1">
+                    <div class="product-info">
+                        <h2>Air Jordan 1 </h2>
+
+                        <p class="price">1200:-</p>
+                        <p class="price">fFinns i dem flästa olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
