--- a/Socialamedier.html
+++ b/Socialamedier.html
@@ -13,7 +13,7 @@
         <div class="home-button">
             <a href="index.html">Home</a>
         </div>
-        <h1 class="title">Följ oss på sociala medier för att beställa</h1>
+        <h1 class="title">Skriv till oss på sociala medier vid intresse!</h1>
         <div class="social-links">
             <a href="https://www.snapchat.com/add/Jack_Sneakers" target="_blank">
                 <img src="snaplogo.png" alt="Snapchat" class="social-icon">
