--- a/Socialamedier.html
+++ b/Socialamedier.html
@@ -18,7 +18,7 @@
             <a href="https://www.snapchat.com/add/Jack_Sneakers" target="_blank">
                 <img src="snaplogo.png" alt="Snapchat" class="social-icon">
             </a>
-            <a href="https://www.instagram.com/Jack_Fash" target="_blank">
+            <a href="https://www.instagram.com/" target="_blank">
                 <img src="Instagram_logo.webp" alt="Instagram" class="social-icon">
             </a>
             <!-- Add more social media links as needed -->
