--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h2>Air Jordan 1 </h2>
 
                         <p class="price">1200:-</p>
-                        <p class="price">fFinns i dem flästa olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
+                        <p class="price">Finns i dem flesta olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
                         <!-- Inside your product block -->
                         <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
 
