--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Jackfash</h1>
             <nav>
-                <button onclick="filterCategory('all')">All</button>
+                <button onclick="filterCategory('all')">Startsida</button>
                 <button onclick="filterCategory('tröja')">Tröjor</button>
                 <button onclick="filterCategory('jacka')">Jackor</button>
                 <button onclick="filterCategory('skor')">Skor</button>
