--- a/index.html
+++ b/index.html
@@ -96,6 +96,63 @@
                         <a href="#" class="btn-quality">Quality Check</a>
                     </div>
                 </div>
+
+                <div class="product col-2" data-category="skor" data-name="Air Jordan 1 AJ1 aj1 Aj1">
+                    <img src="aj1.webp" alt="Air Jordan 1">
+                    <div class="product-info">
+                        <h2>Air Jordan 1 </h2>
+
+                        <p class="price">1200:-</p>
+                        <p class="price">Finns i dem flesta olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+
+                <div class="product col-2" data-category="skor" data-name="Air Jordan 1 AJ1 aj1 Aj1">
+                    <img src="aj1.webp" alt="Air Jordan 1">
+                    <div class="product-info">
+                        <h2>Air Jordan 1 </h2>
+
+                        <p class="price">1200:-</p>
+                        <p class="price">Finns i dem flesta olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+
+                <div class="product col-2" data-category="skor" data-name="Air Jordan 1 AJ1 aj1 Aj1">
+                    <img src="aj1.webp" alt="Air Jordan 1">
+                    <div class="product-info">
+                        <h2>Air Jordan 1 </h2>
+
+                        <p class="price">1200:-</p>
+                        <p class="price">Finns i dem flesta olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
+
+
+                <div class="product col-2" data-category="skor" data-name="Air Jordan 1 AJ1 aj1 Aj1">
+                    <img src="aj1.webp" alt="Air Jordan 1">
+                    <div class="product-info">
+                        <h2>Air Jordan 1 </h2>
+
+                        <p class="price">1200:-</p>
+                        <p class="price">Finns i dem flesta olika Colorways (!!Vissa modeler kan kosta mer än andra!!)</p>
+                        <!-- Inside your product block -->
+                        <a href="#" class="btn-buy" onclick="redirectToBuyPage('productId')">Buy Now</a>
+
+                        <a href="#" class="btn-quality">Quality Check</a>
+                    </div>
+                </div>
         </main> <!-- Repeat this block for each product -->
         <!-- Example Product -->
 
